<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <group android:checkableBehavior="single">

    <item
        android:id="@+id/home"
        android:checked="false"
        android:title="@string/home"/>
    <item
        android:id="@+id/wayfinder"
        android:checked="false"
        android:title="@string/wayfinder"/>
    <item
        android:id="@+id/raceday_schedule"
        android:checked="false"
        android:title="@string/raceday_schedule"/>
    <item
        android:id="@+id/race_teams"
        android:checked="false"
        android:title="@string/race_teams"/>
    <item
        android:id="@+id/weather"
        android:checked="false"
        android:title="@string/weather"/>
    <item
        android:id="@+id/faq"
        android:checked="false"
        android:title="@string/faq"/>

  </group>
</menu>